k8s/sites.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: depot
  template:
    metadata:
      labels:
        app: depot
    spec:
      containers:
      - name: depot
        image: borderflow-site:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: depot-storage
          mountPath: /data
      volumes:
      - name: depot-storage
        persistentVolumeClaim:
          claimName: depot-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: depot
spec:
  selector:
    app: depot
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30001
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: border
spec:
  replicas: 1
  selector:
    matchLabels:
      app: border
  template:
    metadata:
      labels:
        app: border
    spec:
      containers:
      - name: border
        image: borderflow-site:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: border-storage
          mountPath: /data
      volumes:
      - name: border-storage
        persistentVolumeClaim:
          claimName: border-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: border
spec:
  selector:
    app: border
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30002
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: port
spec:
  replicas: 1
  selector:
    matchLabels:
      app: port
  template:
    metadata:
      labels:
        app: port
    spec:
      containers:
      - name: port
        image: borderflow-site:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: port-storage
          mountPath: /data
      volumes:
      - name: port-storage
        persistentVolumeClaim:
          claimName: port-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: port
spec:
  selector:
    app: port
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30003
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub
  template:
    metadata:
      labels:
        app: hub
    spec:
      containers:
      - name: hub
        image: borderflow-site:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: hub-storage
          mountPath: /data
      volumes:
      - name: hub-storage
        persistentVolumeClaim:
          claimName: hub-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: hub
spec:
  selector:
    app: hub
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30004
  type: NodePort
